# AugmentedDataLoader

./: .gitignore  AugmentedDataLoader.ipynb  AugmentedDataLoader.py  AugmentedDataLoaderDebugMode.ipynb  AugmentedDataLoaderTest.py  AugmentedDataLoaderUtils.py  DataGenerator.py  DataGeneratorTest.py  InMemoryAugmentation.py  LICENSE.txt  README.md  RandomTransform.py  augmentation.py  augmentation_types.py  augmentation_v2.py  mon_augment.ipynb  mon_augment_v3.ipynb  pyproject.toml  requirements.txt  setup.py  test.ipynb  unit_test.py  utils.py
.github/workflows/: release.yml
AugmentedDataLoader/: __init__.py
AugmentedDataLoader/datasets/: ImageToImageDataset.py  __init__.py
AugmentedDataLoader/loaders/: AugmentedDataLoader.py  AugmentedImageToImageDataLoader.py  BaseAugmentedDataLoader.py  __init__.py
AugmentedDataLoader/tests/: AugmentedDataLoaderTest.py
AugmentedDataLoader/utils/: AugmentedDataLoaderUtils.py
benchmark/: AugmentedDataLoader.py  AugmentedDataLoaderUtils.py  cpu_bench.py  gpu_bench.py  run.bat  run.sh
benchmark/results/: cpu_bench.txt  gpu_bench.txt  results.ipynb
benchmark/results/v1.0a/: bench_results(v1.0a).csv  cpu_bench.py  gpu_bench.py
benchmark/results/v3.0/: cpu_bench.py  gpu_bench.py
datasets/: ImageToImageDataset.py
loaders/: AugmentedDataLoader.py  AugmentedImageToImageDataLoader.py  BaseAugmentedDataLoader.py
utils/: AugmentedDataLoaderUtils.py
